--- a/index.html
+++ b/index.html
@@ -49,5 +49,7 @@
 			<p>&copy; 2024 MR Tech Solutions. All Rights Reserved.</p>
 		</footer>
 	</div>
+
+	<script src="js/script-deny-action.js"></script>
 </body>
 </html>
