--- a/aboutme.html
+++ b/aboutme.html
@@ -74,5 +74,7 @@
 			<p>&copy; 2024 MR Tech Solutions. All Rights Reserved.</p>
 		</footer>
 	</div>
+
+	<script src="js/script-deny-action.js"></script>
 </body>
 </html>
