--- a/index.html
+++ b/index.html
@@ -21,25 +21,95 @@
 						<a href="aboutme.html">ABOUT</a>
 					</li>
 					<li>
-						<a href="#">CONTACT US</a>
+						<a href="contactus.html">CONTACT US</a>
 					</li>
 				</ul>
 			</div>
-			<div class="content">
-				<div class="cards">
-					<div class="card card-md">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 col-sm-6 col-xs-12">
 						<div class="card-body">
-							<img src="images/home-image.png" width="100%">
+							<img src="images/home-image.png" class="home-image">
 						</div>
 					</div>
-					<div class="card card-md">
+					<div class="col-md-6 col-sm-6 col-xs-12">
 						<div class="card-body">
 							<h1 class="heading-title">MR Tech Solutions</h1>
 							<p class="paragraph">
-								In 10+ years of experience in designing & developing web apps, websites with Ecommerce. We can work on platforms like <a href=""><b>Shopify</b></a>, <a href=""><b>WordPress</b></a> and build web applications using PHP Frameworks like <a href=""><b>Laravel</b></a>. Also, have the knowledge in Digital Marketing and SEO. We also cater Network Services. 
+								In 10+ years of experience in designing & developing web apps, websites with Ecommerce. I can work on platforms like <a href=""><b>Shopify</b></a>, <a href=""><b>WordPress</b></a> and build web applications using PHP Frameworks like <a href=""><b>Laravel</b></a>. Also, have the knowledge in Digital Marketing and SEO. I also cater Network Services. 
 							</p>
 							<br>
 							<a href="aboutme.html" class="btn">Read More...</a>
+						</div>
+					</div>
+				</div>
+				<hr>
+				<div class="row">
+					<div class="col-md-12 col-sm-12 col-xs-12">
+						<h2 class="text-primary"><center>Recent Projects</center></h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4 col-sm-6 col-xs-12">
+						<div class="projects">
+							<div class="project-img">
+								<img src="images/tradesafe.png">
+							</div>
+							<div class="project-caption">
+								TRADESAFE
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12">
+						<div class="projects">
+							<div class="project-img">
+								<img src="images/fromthegroundup.JPG">
+							</div>
+							<div class="project-caption">
+								REAL FOOD FROM THE GROUND UP			
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12">
+						<div class="projects">
+							<div class="project-img">
+								<img src="images/theunplugged.JPG">
+							</div>
+							<div class="project-caption">
+								THE UNPLUGGED PSYCHOLOGIST
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4 col-sm-6 col-xs-12">
+						<div class="projects">
+							<div class="project-img">
+								<img src="images/despatisseries.JPG">
+							</div>
+							<div class="project-caption">
+								DES PATISSERIES
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12">
+						<div class="projects">
+							<div class="project-img">
+								<img src="images/pristineparts.JPG">
+							</div>
+							<div class="project-caption">
+								Pristine Parts
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12">
+						<div class="projects">
+							<div class="project-img">
+								<img src="images/g-mee.png">
+							</div>
+							<div class="project-caption">
+								G-mee
+							</div>
 						</div>
 					</div>
 				</div>
@@ -50,7 +120,6 @@
 		</footer>
 	</div>
 
-	
 	<script src="js/script-deny-action.js"></script>
 </body>
 </html>
