--- a/aboutme.html
+++ b/aboutme.html
@@ -21,18 +21,20 @@
 						<a href="aboutme.html">ABOUT</a>
 					</li>
 					<li>
-						<a href="#">CONTACT US</a>
+						<a href="contactus.html">CONTACT US</a>
 					</li>
 				</ul>
 			</div>
 			<div class="content">
-				<div class="cards">
-					<div class="card card-lg">
+				<div class="row">
+					<div class="col-md-9 col-sm-9 col-xs-12">
 						<div class="card-body">
 							<h1 class="heading-title">MR Tech Solutions</h1>
 							<p class="paragraph">
 								In 10+ years of experience in designing & developing web apps, websites with Ecommerce. We can work on platforms like <a href=""><b>Shopify</b></a>, <a href=""><b>WordPress</b></a> and build web applications using PHP Frameworks like <a href=""><b>Laravel</b></a>. Also, have the knowledge in Digital Marketing and SEO. We also cater Network Services. 
 							</p>
+							<br>
+							<hr>
 							<br>
 							<div class="owner">
 								<center>
@@ -53,13 +55,41 @@
 									<li>Security concerns in networks</li>
 								</ul>
 							</div>
+							<hr>
+							<h2 class="text-primary"><center>SERVICES</center></h2>
+							<div id="webapplication">
+								<h4>Website & Application Development</h4>
+								<p class="paragraph">
+									Converting design, securing data with fully functional app & website according to client specifications. Developing website using Laravel, WordPress and Shopify.
+								</p>
+							</div>
+							<hr>
+							<div id="digitalmarketing">
+								<h4>Digital Marketing (Facebook,Tiktok,Youtube,SMS,Email)</h4>
+								<p class="paragraph">
+									Promoting the products or services to boost online presence in the digital world such as search engines, social media, email, and other websites to connect with current and prospective customers.
+								</p>
+							</div>
+							<hr>
+							<div id="seo">
+								<h4>Search Engine Optimization (SEO)</h4>
+								<p class="paragraph">
+									Analyze, review and implement SEO techniques in order to improve website performance and gain organic traffic.
+								</p>
+							</div>
+							<hr>
+							<div id="networkservices">
+								<h4>Network Services</h4>
+								<p class="paragraph">
+									Network infrastructure installation.
+								</p>
+							</div>
 						</div>
 					</div>
-					<div class="card card-xs">
+					<div class="col-md-3 col-sm-3 col-xs-12">
 						<div class="sidebar">
-							<h2>Services</h2>
+							<h2>SERVICES</h2>
 							<ul>
-								<li><a href="#ecommerce">eCommerce</a></li>
 								<li><a href="#webapplication">Web Applications</a></li>
 								<li><a href="#digitalmarketing">Digital Marketing</a></li>
 								<li><a href="#seo">SEO</a></li>
@@ -75,7 +105,6 @@
 		</footer>
 	</div>
 
-	
 	<script src="js/script-deny-action.js"></script>
 </body>
 </html>
