--- a/contactus.html
+++ b/contactus.html
@@ -74,6 +74,6 @@
 		</footer>
 	</div>
 
-	<!-- <script src="js/script-deny-action.js"></script> -->
+	<script src="js/script-deny-action.js"></script>
 </body>
 </html>
