--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<a href="aboutme.html">ABOUT</a>
 					</li>
 					<li>
-						<a href="contactus.html">CONTACT US</a>
+						<a href="contactus.html">CONTACT</a>
 					</li>
 				</ul>
 			</div>
